# x3d-cpp

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  NOTICE  README.generator.md  README.md  mise.toml  mkdocs.yml  pyproject.toml  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
cmake/: X3DTargetPurpose.cmake  x3d_cppConfig.cmake.in
examples/: 01_load_validate_convert.cpp  02_extract_render_feed.cpp  03_attach_behavior_tick.cpp  README.md
examples/asset_import/: CMakeLists.txt  README.md  assimp_source.cpp  assimp_source.hpp  backend_registry.hpp  cgltf_source.cpp  cgltf_source.hpp  emit.cpp  emit.hpp  fixture_source.cpp  fixture_source.hpp  glsl_emit.cpp  glsl_emit.hpp  import_source.hpp  main.cpp  texture_pipeline.cpp  texture_pipeline.hpp  usd_preview_surface_embed.hpp.in  usd_source.cpp  usd_source.hpp
examples/asset_import/assets/fixtures/: gen_gltf_fixture.py  tri.mtl  twobox.glb
examples/asset_import/assets/showcase/: .gitignore  README.md  cube.gltf  cube.mtl  cube.usda  gen.py  gen_hier.py
examples/asset_import/footprint/: authoring_smoke.cpp  baseline.tsv
examples/asset_import/patches/: tinyusdz-composition.patch
examples/asset_import/tests/: assimp_source_test.cpp  backend_registry_test.cpp  backend_swap_test.cpp  cgltf_source_test.cpp  emit_test.cpp  fixture_source_test.cpp  roundtrip_test.cpp  texture_pipeline_test.cpp  usd_source_test.cpp
examples/asset_import/tests/fixtures/: material_params.usda
examples/asset_import/tests/fixtures/composed/: geom.usda  piece.usda  root.usda
examples/cpu_raster/: CMakeLists.txt  README.md  main.cpp
examples/cpu_raster/assets/: raster_smoke.x3d  skybox_smoke.x3d  text_smoke.x3d  textured_scene.x3d
examples/cpu_raster/assets/demos/: anim_color.x3d  anim_dvd.x3d  anim_orientation.x3d  anim_position.x3d
examples/cpu_raster/assets/gallery/: hero_lights.x3d  hero_pbr_grid.x3d  hero_primitives.x3d  hero_skybox_pbr.x3d  hero_teapot_nurbs.x3d
examples/cpu_raster/assets/kelp_flythrough/: .gitignore  README.md  fetch_kelp.sh  flythrough_kelp.x3d
examples/cpu_raster/assets/models/: gltf_to_x3d.py
examples/cpu_raster/assets/models/lion_head/: README.md  lion_head.x3d  lion_head_garden.x3d  lion_head_lit.x3d
examples/cpu_raster/assets/skybox/: README.md  make_cubemap.sh
examples/cpu_raster/cpuraster/: BuiltinFont.hpp  Framebuffer.hpp  GlslInterpreter.hpp  ImageWrite.cpp  ImageWrite.hpp  MaterialShader.hpp  ProceduralTexture.hpp  Rasterizer.hpp  SceneRender.hpp  Texture.hpp  font8x8.hpp  glsl.hpp
examples/cpu_raster/shaders/: author_lambert.frag  usd_preview_surface.frag
examples/cpu_raster/tests/: demo_animation_test.cpp  glsl_interp_test.cpp  glsl_test.cpp  material_shader_test.cpp  positional_light_test.cpp  rasterizer_test.cpp  render_smoke_test.cpp  skybox_test.cpp  text_render_test.cpp  texture_render_test.cpp  tier1_features_test.cpp
examples/cpu_raster/tests/golden/demos/: anim_color_f0030.ppm  anim_color_f0090.ppm  anim_dvd_f0030.ppm  anim_dvd_f0090.ppm  anim_orientation_f0090.ppm  anim_position_f0030.ppm  anim_position_f0090.ppm
examples/embed_minimal/: CMakeLists.txt  README.md  authoring.cpp  main.cpp
examples/poc_renderer/: CMakeLists.txt  README.md  draw_math.hpp  input.cpp  input.hpp  main.cpp
examples/poc_renderer/assets/: alpha_mask_cutout.x3d  alpha_mask_opaque.x3d  lit_scene.x3d  multishape.x3d  textured_text.x3d  transparent_scene.x3d  triangle.x3d
examples/poc_renderer/shaders/: bg.frag  bg.vert  flat.frag  flat.vert  lit.frag  lit.vert  pbr.frag  unlit.frag  unlit.vert
examples/poc_renderer/tests/: draw_math_test.cpp  input_test.cpp
examples/x3d2svg/: CMakeLists.txt  README.md  main.cpp  x3d2svg.hpp
examples/x3d2svg/assets/: smoke.x3d
examples/x3d2svg/tests/: project_test.cpp
generated_cpp_bindings/: AcousticProperties.cpp  AcousticProperties.hpp  Analyser.cpp  Analyser.hpp  Anchor.cpp  Anchor.hpp  Appearance.cpp  Appearance.hpp  Arc2D.cpp  Arc2D.hpp  ArcClose2D.cpp  ArcClose2D.hpp  AudioClip.cpp  AudioClip.hpp  AudioDestination.cpp  AudioDestination.hpp  Background.cpp  Background.hpp  BallJoint.cpp  BallJoint.hpp  Billboard.cpp  Billboard.hpp  BiquadFilter.cpp  BiquadFilter.hpp  BlendedVolumeStyle.cpp  BlendedVolumeStyle.hpp  BooleanFilter.cpp  BooleanFilter.hpp  BooleanSequencer.cpp  BooleanSequencer.hpp  BooleanToggle.cpp  BooleanToggle.hpp  BooleanTrigger.cpp  BooleanTrigger.hpp  BoundaryEnhancementVolumeStyle.cpp  BoundaryEnhancementVolumeStyle.hpp  BoundedPhysicsModel.cpp  BoundedPhysicsModel.hpp  Box.cpp  Box.hpp  (+643 more)
runtime/: InlineExpand.hpp  RecursionLimits.hpp  X3DDocument.hpp  X3DHeader.hpp  X3DImportExport.hpp  X3DProto.hpp  X3DProtoClone.hpp  X3DProtoExpand.hpp  X3DRangeValidate.hpp  X3DRoute.hpp  X3DRuntime.hpp  X3DScene.hpp
scripts/: authoring-footprint.sh  benchmark_build.py  check_action_pins.py  check_golden.sh  check_sai_invariants.py  check_sai_services.py  check_screenshot_bg.py  classify_ci_changes.py  code_rag.py  conformance_view.py  corpus_sweep.cpp  coverage_gate.py  doc_ctest_gate.py  docs_drift.py  doctest_convert.py  doctest_regroup.py  fetch_conformance_nist.sh  fetch_corpus.sh  gen_profile_tables.py  migrate_ns_includes.sh  parse_one.cpp  pick-card.sh  poc_conformance_sweep.py  sai_conformance.py  spec_rag.py  validate-examples.sh  verify_install_embed.sh  visual_conformance_sweep.py
tests/: test_benchmark_build.py  test_ci_pins.py  test_claims.py  test_classify_ci_changes.py  test_cli_fail_closed.py  test_cli_options.py  test_cmake_aggregates.py  test_cmake_target_purpose.py  test_code_rag.py  test_conformance_view.py  test_core_namespace_emit.py  test_cpp_header_backend.py  test_decl_def_split.py  test_default_expr.py  test_defaults.py  test_descriptors.py  test_emission.py  test_enums.py  test_formatter_pin.py  test_golden_smoke.py  test_golden_tree.py  test_header_contract_shape.py  test_naming.py  (+12 more)
tests/cmake/dev_tooling/: CMakeLists.txt  consumer.cpp
tests/cmake/installed_targets/: CMakeLists.txt
tests/cmake/target_purpose/: CMakeLists.txt
(+1838 files in other folders)
